# ARCoreApp

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: arcoreapp.cc  arcoreapp.h  background_renderer.cc  background_renderer.h  glm.h  jni_interface.cc  jni_interface.h  texture.cc  texture.h  util.cc  util.h
app/src/main/java/com/danielwei/arcoreapp/: CameraPermissionHelper.java  JniInterface.java  MainActivity.java  SnackbarHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: settings_menu.xml
app/src/main/res/values/: strings.xml
